package com.onyx.android.edu.db.model;

/**
 * Created by ming on 16/7/5.
 */
public class AtomicOption{
    public ResourceBundle option;
}
