package com.onyx.android.edu.db.model;

import java.util.Map;

/**
 * Created by ming on 16/7/5.
 */
public class ResourceBundle {
    String html;
    Map<String,Object> resourceMap;
}
