@startuml

class AtomicQuiz{
    ResourceBundle title; //标题
    List<AtomicOption> options; //选项列表（可为null)
    ResourceBundle answer; //回答(学生的回答，与标准答案区分
    ResourceBundle analysis; //分析
    ResourceBundle score; //得分
    ResourceBundle standardAnswer; //标准答案
    Textbook textbook; //教材
    Subject subject; //科目
    Section section; //分段
}

class Textbook{
    教材
    //唯一ID
    Long uniqueId;
    String Name;
}

class Subject{
    科目
    //唯一ID
    Long uniqueId;
    String Name;
}

class Section{
    学段
    //唯一ID
    Long uniqueId;
    String Name;
    String Grade; //学段
}


class ResourceBundle{
    String html;
    Map<String,Object> resourceMap;
}

class AtomicOption{
    ResourceBundle option;
}

class AtomicAnswer{
    ResourceBundle answer;
}

class ChoiceQuiz{
    选择题
    //唯一ID
    Long uniqueId;
    public Integer type // 1：单选 2：多选
    AtomicQuiz quiz;
}

class EssayQuiz{
    问答题
    //唯一ID
    Long uniqueId;
    AtomicQuiz quiz;
}

class ComplexQuiz{
    复杂题
   //唯一ID
   Long uniqueId;
   private List<AtomicQuiz> childQuizs; //子问题组
   AtomicQuiz quiz;
}

class CompletionQuiz{
   填空题
   //唯一ID
   Long uniqueId;
   AtomicQuiz quiz;
}

class Examination{
    //唯一ID
    Long uniqueId;
    //标题
    String title;
    //细节
    String detail;
    //作者
    String author;
    //1:作业 2:考试 3:题库
    Integer type;
    //教材
    Textbook textbook;
    //科目
    Subject subject;
    //分段
    Section section;
    //章节集合
    Collection<Chapter> chapterList;
}

class Chapter{
    //唯一ID
    Long uniqueId;
    String name; //章节名称
    String fatherName; //父节点名称
    Collection<AtomicQuiz> atomicQuizList; //问题集合
    Integer index; //序列
}

Examination o-- Chapter

AtomicQuiz ..> ResourceBundle
AtomicQuiz ..> AtomicOption
AtomicQuiz ..> AtomicAnswer
AtomicOption ..> ResourceBundle
AtomicAnswer ..> ResourceBundle

ChoiceQuiz ..> AtomicQuiz
EssayQuiz ..> AtomicQuiz
ComplexQuiz ..> AtomicQuiz
ComplexQuiz o-- AtomicQuiz
CompletionQuiz ..>AtomicQuiz

Chapter o-- ChoiceQuiz
Chapter o-- EssayQuiz
Chapter o-- ComplexQuiz
Chapter o-- CompletionQuiz

Examination ..> Textbook
Examination ..> Subject
Examination ..> Section

AtomicQuiz ..> Textbook
AtomicQuiz ..> Subject
AtomicQuiz ..> Section
@enduml